<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_versionname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawablePadding="12dp"
        android:layout_marginTop="30dp"
        android:drawableTop="@drawable/icon_aboutapp_240"
        android:text="@string/version"
        android:textColor="@color/c2"
        android:textSize="@dimen/t5" />

    <TextView
        android:id="@+id/tv_check_version"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_about_selector"
        android:gravity="center"
        android:text="@string/checkversion"
        android:textColor="@color/c7"
        android:textSize="@dimen/t1" />

    <TextView
        android:id="@+id/tv_rate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_about_selector"
        android:gravity="center"
        android:text="@string/rate"
        android:textColor="@color/c7"
        android:textSize="@dimen/t1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|bottom"
        android:text="@string/company_CN"
        android:textColor="@color/c2"
        android:textSize="@dimen/t6" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="5dp"
        android:text="@string/company_EN"
        android:textColor="@color/c2"
        android:textSize="@dimen/t7" />

</LinearLayout>