<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c7"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_firststep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/connection_apple_step1"
        android:textColor="@color/c1"
        android:textSize="@dimen/t4" >
    </TextView>

    <TextView
        android:id="@+id/tv_wifiap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="-20dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:background="@drawable/bg_tv_wifiap"
        android:textColor="@color/c3"
        android:textSize="@dimen/t4"
        android:text="@string/wifiap" >
    </TextView>

    <TextView
        android:id="@+id/tv_secondstep"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:paddingTop="56dp"
        android:text="@string/connection_apple_step2"
        android:textColor="@color/c1"
        android:textSize="@dimen/t4" >

    </TextView>

</LinearLayout>