<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btn_create_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/bg_btn_send"
            android:text="@string/create_connection"
            android:textColor="@color/c2"
            android:textSize="@dimen/t1" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btn_join_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/bg_btn_receive"
            android:text="@string/join_connection"
            android:textColor="@color/c2"
            android:textSize="@dimen/t1" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_connect_iphone"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:drawableTop="@drawable/bg_btn_linkios"
            android:gravity="center"
            android:text="@string/connect_iphone"
            android:textColor="@color/c1"
            android:textSize="@dimen/t5" />

        <Button
            android:id="@+id/btn_friends_install"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:background="@null"
            android:drawableTop="@drawable/bg_btn_linkfriend"
            android:gravity="center"
            android:text="@string/friends_install"
            android:textColor="@color/c1"
            android:textSize="@dimen/t5" />
    </RelativeLayout>

</LinearLayout>