<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/creater_Iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/favicon" />

    <TextView
        android:id="@+id/tv_notify_friends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/creater_Iv"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="@color/c1"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/tv_create_connection_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center_horizontal"
            android:text="@string/creating_connection"
            android:textColor="@color/c1"
            android:textSize="@dimen/t1" />

        <TextView
            android:id="@+id/tv_create_iscreating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_create_connection_status"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/creating_iscreating"
            android:textColor="@color/c3"
            android:textSize="@dimen/t5" />

        <TextView
            android:id="@+id/tv_create_success_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_create_connection_status"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/c3"
            android:textSize="@dimen/t5"
            android:visibility="gone" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_close_connection"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"

        android:background="@null"
        android:drawableTop="@drawable/bg_btn_cancel"
        android:text="@string/disconnect"
        android:textColor="@color/c1"
        android:textSize="@dimen/t5" />

    <Button
        android:id="@+id/btn_friend_install"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@null"
        android:drawableTop="@drawable/bg_btn_linkfriend"
        android:text="@string/friends_install"
        android:textColor="@color/c1"
        android:textSize="@dimen/t5" />

    <Button
        android:id="@+id/btn_send_checked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:drawableTop="@drawable/btn_send_ok"
        android:text="@string/create_connection_btn_send"
        android:visibility="gone"
        android:textColor="@color/c1"
        android:textSize="@dimen/t5" />
     <Button
        android:id="@+id/btn_send_unchecked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:drawableTop="@drawable/btn_send_ok_pressed"
        android:visibility="gone"
        android:text="@string/create_connection_btn_send"
        android:textColor="@color/c1"
        android:textSize="@dimen/t5" />

</RelativeLayout>