<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sv_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/ll_show_3G"
            android:layout_width="match_parent"
            android:layout_height="84dp" >

            <TextView
                android:id="@+id/tv_share_3G"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="22dp"
                android:gravity="left|center_vertical"
                android:text="@string/share_3G"
                android:textColor="@color/c1"
                android:textSize="@dimen/t3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_share_3G"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/share_3G_explain"
                android:textColor="@color/c2"
                android:textSize="@dimen/t4" />

            <org.jraf.android.backport.switchwidget.Switch
                android:id="@+id/switch_share_3G"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp" />
        </RelativeLayout>

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/c3" />

        <RelativeLayout
            android:id="@+id/ll_show_hidden_files"
            android:layout_width="match_parent"
            android:layout_height="84dp" >

            <TextView
                android:id="@+id/tv_show_hidden_files"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="22dp"
                android:text="@string/show_hidden_files"
                android:textColor="@color/c1"
                android:textSize="@dimen/t3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_show_hidden_files"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/hidden_files_explain"
                android:textColor="@color/c2"
                android:textSize="@dimen/t4" />

            <org.jraf.android.backport.switchwidget.Switch
                android:id="@+id/switch_show_hidden_files"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/c3" />
    </LinearLayout>

</ScrollView>